--- a/javascripts/discourse/templates/components/tlp-featured-topic.hbs
+++ b/javascripts/discourse/templates/components/tlp-featured-topic.hbs
@@ -1,5 +1,5 @@
-{{preview-unbound topic.thumbnails opts=(hash featured=true)}}
 <div class="featured-details">
+  {{preview-unbound topic.thumbnails opts=(hash featured=true)}}
   <div class="content">
     <div class="title">
       {{topic.title}}
@@ -10,8 +10,8 @@
       </div>
     {{/if}}
     <span class="user">
-      {{topic.topic_post_user.username}}
-      {{avatar topic.topic_post_user imageSize="small"}}
+      {{featuredUsername}}
+      {{avatar featuredUser imageSize="small"}}
     </span>
   </div>
 </div>
