--- a/javascripts/discourse/templates/components/tlp-featured-topics.hbs
+++ b/javascripts/discourse/templates/components/tlp-featured-topics.hbs
@@ -5,7 +5,7 @@
     </div>
   {{/if}}
   <div class="topics">
-    {{#each featuredTopics as |t|}}
+    {{#each this.featuredTopics.topic_list.topics as |t|}}
       {{tlp-featured-topic topic=t}}
     {{/each}}
   </div>
