--- a/common/common.scss
+++ b/common/common.scss
@@ -333,23 +333,23 @@ button.list-button {
 
   .topics {
 
-    display: grid;
-    margin: auto;
-    justify-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    display: inline-flex;
+    width:1100px;
+    overflow-x: scroll;
     column-gap: 5px;
     grid-row-gap: 5px;
 
     .tlp-featured-topic {
 
+      display:block;
       cursor: pointer;
 
      .featured-details {
        position: relative;
 
-       img {
+       img.thumbnail {
          z-index:0;
-         max-width:100%;
+         height:150px;
        }
 
       .content, .content a {
