support for Featured Images on Category discovery routes, control over number of Featured Images, removal of various bits of code for features that won't be supported in the TC

--- a/javascripts/discourse/templates/components/tlp-featured-topics.hbs
+++ b/javascripts/discourse/templates/components/tlp-featured-topics.hbs
@@ -5,7 +5,7 @@
     </div>
   {{/if}}
   <div class="topics">
-    {{#each this.featuredTopics.topic_list.topics as |t|}}
+    {{#each featuredTopics as |t|}}
       {{tlp-featured-topic topic=t}}
     {{/each}}
   </div>
