--- a/javascripts/discourse/connectors/discovery-list-container-top/featured-topics-discovery.hbs
+++ b/javascripts/discourse/connectors/discovery-list-container-top/featured-topics-discovery.hbs
@@ -1,3 +1,5 @@
-{{#if featuredTopics}}
-  {{tlp-featured-topics featuredTopics=featuredTopics}}
+{{#if showFeaturedImages}}
+  {{#if featuredTopics}}
+    {{tlp-featured-topics featuredTopics=featuredTopics}}
+  {{/if}}
 {{/if}}
