FIX: working exceprts in Featured Images

--- a/javascripts/discourse/templates/components/tlp-featured-topic.hbs
+++ b/javascripts/discourse/templates/components/tlp-featured-topic.hbs
@@ -4,9 +4,9 @@
     <div class="title">
       {{topic.title}}
     </div>
-    {{#if siteSettings.topic_list_featured_excerpt}}
+    {{#if featuredExcerpt}}
       <div class="excerpt">
-        {{{topic.excerpt}}}
+        {{{featuredExcerpt}}}
       </div>
     {{/if}}
     <span class="user">
