FIX: prevent vertical scroll bar for Featured Images

--- a/common/common.scss
+++ b/common/common.scss
@@ -334,6 +334,7 @@ button.list-button {
   .topics {
     display: flex;
     overflow-x: scroll;
+    overflow-y: hidden;
 
     .tlp-featured-topic {
 
