--- a/common/common.scss
+++ b/common/common.scss
@@ -9,7 +9,7 @@
     display: grid;
     grid-gap: 6px;
     grid-template-columns: repeat(auto-fill, minmax(320px,1fr));
-    grid-auto-rows: 5px;
+    grid-auto-rows: 10px;
   }
 
   .tiles-grid-item-width2 {
@@ -23,6 +23,7 @@
     box-sizing: border-box;
     cursor: pointer;
     border-radius: 3px;
+    grid-row-end: span 5;
   }
 
   .tiles-grid-item-content {
