FIX: missing locale string and icon for portfolio functionality

--- a/javascripts/discourse/connectors/user-activity-bottom/portfolio-list.hbs
+++ b/javascripts/discourse/connectors/user-activity-bottom/portfolio-list.hbs
@@ -1,5 +1,5 @@
 {{#if portfolioEnabled}}
   {{#link-to 'userActivity.portfolio'}}
-    {{d-icon 'images'}} {{i18n 'user_activity_portfolio.title'}}
+    {{d-icon 'images'}} {{theme-i18n 'user_activity_portfolio_title'}}
   {{/link-to}}
 {{/if}}
