IMPROVE: renamed some variables, added debounce logic to action buttons, added logic to hide actions and thumbnail picker when sidecar not installed

--- a/javascripts/discourse/connectors/edit-topic/select-thumbnail-connector.hbs
+++ b/javascripts/discourse/connectors/edit-topic/select-thumbnail-connector.hbs
@@ -1,1 +1,3 @@
-{{select-thumbnail topic_id=model.id topic_title=model.title buffered=buffered}}
+{{#if topic.sidecar_installed}}
+  {{select-thumbnail topic_id=model.id topic_title=model.title buffered=buffered}}
+{{/if}}
