--- a/javascripts/discourse/connectors/edit-topic/select-thumbnail-connector.hbs
+++ b/javascripts/discourse/connectors/edit-topic/select-thumbnail-connector.hbs
@@ -1,3 +1,3 @@
-{{#if topic.sidecar_installed}}
+{{#if model.sidecar_installed}}
   {{select-thumbnail topic_id=model.id topic_title=model.title buffered=buffered}}
 {{/if}}
