CSS tweak to support tiles on suggested topics on mobile

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -64,7 +64,7 @@
 }
 
 //tiles styling  specific styling
-.mobile-view #list-area.tiles-style {
+.mobile-view .tiles-style {
 
   .tiles-grid {
     display:block;
