Switch SCSS color variables to CSS color variables

--- a/common/common.scss
+++ b/common/common.scss
@@ -71,7 +71,7 @@
      }
 
     a.title {
-      color: $primary;
+      color: var(--primary);
     }
 
     a.topic-featured-link {
@@ -134,7 +134,7 @@
       max-width: 100%;
       float: left;
       clear: both;
-      
+
       overflow-wrap: break-word;
       word-wrap: break-word;
 
@@ -161,7 +161,7 @@
     grid-area: meta;
 
     .topic-views {
-      color: $primary-medium;
+      color: var(--primary-medium);
     }
 
     .topic-replies span {
@@ -288,7 +288,7 @@ button.list-button {
   }
 
   &.has-like, &.topic-like:not([disabled]):hover {
-    color: $love;
+    color: var(--love);
   }
 
   &.has-like[disabled]:hover {
@@ -301,7 +301,7 @@ button.list-button {
 
   &.bookmarked, &.topic-bookmark:hover {
     i.fa-bookmark, .d-icon-bookmark {
-      color: $tertiary;
+      color: var(--tertiary);
     }
   }
 }
@@ -313,7 +313,7 @@ button.list-button {
 
   &.has-like {
     .fa-heart, .d-icon-heart {
-      color: $love !important;
+      color: var(--love) !important;
     }
   }
 }
@@ -393,10 +393,10 @@ button.list-button {
       .content, .content a {
 
         z-index: 2;
-        color: $secondary;
+        color: var(--secondary);
 
         a.mention {
-          background-color: $primary-high;
+          background-color: var(--primary-high);
         }
 
         img {
@@ -444,7 +444,7 @@ img.select-thumbnail-options:active {
 }
 
 img.select-thumbnail-preview {
-  border: solid 1px $primary-medium;
+  border: solid 1px var(--primary-medium);
   margin: 5px 0px 5px 0px;
   padding: 5px;
   width: 148px;
@@ -464,16 +464,16 @@ img.select-thumbnail-preview {
   margin-left: 2px;
   display: inline-flex;
   cursor: pointer;
-  
-  background-color: $tertiary;
+
+  background-color: var(--tertiary);
 
   label {
-    color: $secondary;
+    color: var(--secondary);
     display: inline-block;
     cursor: pointer;
   }
   svg {
-    color: $secondary;
+    color: var(--secondary);
     display: inline-block;
   }
 
