--- a/common/common.scss
+++ b/common/common.scss
@@ -40,7 +40,7 @@
   }
 
   .tiles-grid-item:hover {
-    background-color: darken($secondary, 2%);
+    background-color: var(--secondary-very-high);
     lighten: ($primary, 70%);
   }
 
@@ -478,7 +478,7 @@ img.select-thumbnail-preview {
   }
 
   &:hover {
-    background-color: darken($tertiary, 5%);
+    background-color: var(--tertiary-hover);
   }
 }
 
@@ -487,7 +487,7 @@ img.select-thumbnail-preview {
 }
 
 .tiles-grid-item:hover {
-  background-color: darken($secondary, 3%);
+  background-color: var(--secondary-very-high);
   lighten: ($primary, 70%);
 }
 
