--- a/common/common.scss
+++ b/common/common.scss
@@ -134,6 +134,7 @@
       max-width: 100%;
       float: left;
       clear: both;
+      display: block;
       
       overflow-wrap: break-word;
       word-wrap: break-word;
