IMPROVE: styling tweaks for tiles and non-tiles

--- a/common/common.scss
+++ b/common/common.scss
@@ -134,7 +134,7 @@
       max-width: 100%;
       float: left;
       clear: both;
-      display: block;
+      padding-right: 0px;
       
       overflow-wrap: break-word;
       word-wrap: break-word;
@@ -217,6 +217,10 @@
 
 .topic-list .main-link a.title {
   padding: 0;
+}
+
+.topic-details .topic-excerpt {
+  display: block;
 }
 
 .actions-and-meta-data {
