first commit, tiles working

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -63,7 +63,7 @@
 //tiles styling  specific styling
 .mobile-view .tiles-style {
 
-  .tiles-grid {
+  tbody {
     display:block;
     .topic-list-item-separator {
       display: none;
