--- a/common/common.scss
+++ b/common/common.scss
@@ -1,8 +1,11 @@
 //tiles styling  specific styling
 .tiles-style {
 
-  .tiles-grid {
-    display:block;
+  th {
+    display:none;
+  }
+  tbody  {
+  //  display:block;
     .topic-list-item-separator {
       display: none;
     }
