--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -66,6 +66,9 @@
     .topic-list-item-separator {
       display: none;
     }
+    display: grid;
+    grid-gap: 6px;
+    grid-auto-rows: 10px;
   }
 
   .tiles-grid-sizer,
