convert style assignments to css classes

--- a/common/common.scss
+++ b/common/common.scss
@@ -12,6 +12,7 @@
     grid-gap: 6px;
     grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
     grid-auto-rows: 10px;
+    margin-top: 35px;
   }
 
   .tiles-grid-item-width2 {
@@ -26,6 +27,30 @@
     cursor: pointer;
     border-radius: 3px;
     grid-row-end: span 24;
+
+    &.white-text {
+      .topic-details,
+      .topic-title a.title,
+      .topic-featured-link,
+      .topic-excerpt,
+      .discourse-tag,
+      .topic-views,
+      .badge-posts {
+        color: white;
+      }
+    }
+
+    &.black-text {
+      .topic-details,
+      .topic-title a.title,
+      .topic-featured-link,
+      .topic-excerpt,
+      .discourse-tag,
+      .topic-views,
+      .badge-posts {
+        color: black;
+      }
+    }
   }
 
   .tiles-grid-item:hover {
@@ -136,8 +161,8 @@
   }
 
   .topic-details {
-    display: grid;
     grid-area: details;
+    display: grid;
     padding: 0 10px 10px 10px;
     z-index: 10;
     grid-template-columns: 1 1 1 1 auto;
