--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -87,7 +87,7 @@
     border-radius: 3px;
     grid-row-end: span 24;
     
-    &.white-text {
+    &.white-text.has-thumbnail {
       .topic-details,
       .topic-title a.title,
       .topic-featured-link,
@@ -99,7 +99,7 @@
       }
     }
 
-    &.black-text {
+    &.black-text.has-thumbnail {
       .topic-details,
       .topic-title a.title,
       .topic-featured-link,
