--- a/common/common.scss
+++ b/common/common.scss
@@ -35,7 +35,8 @@
       .topic-excerpt,
       .discourse-tag,
       .topic-views,
-      .badge-posts {
+      .badge-posts,
+      .like-count {
         color: white;
       }
     }
@@ -47,7 +48,8 @@
       .topic-excerpt,
       .discourse-tag,
       .topic-views,
-      .badge-posts {
+      .badge-posts,
+      .like-count {
         color: black;
       }
     }
@@ -67,6 +69,45 @@
     grid-template-areas:
       "photo"
       "details";
+  }
+
+  .image {
+    grid-area: photo;
+  }
+
+  .topic-thumbnail {
+    padding: 0px;
+    z-index: -1;
+    width: 100%;
+    display: block;
+  }
+
+  .image-mask {
+    position: relative;
+    margin-bottom: -200px;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+  }
+
+  .thumbnail {
+    .no-thumbnail {
+      display: none;
+    }
+  }
+
+  .topic-details {
+    grid-area: details;
+    display: grid;
+    padding: 10px 10px 10px 10px;
+    z-index: 10;
+    grid-template-columns: 1 1 1 1 auto;
+    grid-template-rows: auto auto auto auto;
+    grid-template-areas:
+      "theader theader theader theader theader"
+      "excerpt excerpt excerpt excerpt excerpt"
+      "tags tags tags tags tags"
+      "meta meta meta meta actions";
   }
 
   .topic-header-grid {
@@ -133,45 +174,6 @@
     .badge-wrapper.box span {
       border-radius: 3px;
     }
-  }
-
-  .image {
-    grid-area: photo;
-  }
-
-  .topic-thumbnail {
-    padding: 0px;
-    z-index: -1;
-    width: 100%;
-    display: block;
-  }
-
-  .image-mask {
-    position: relative;
-    margin-bottom: -200px;
-    height: 100%;
-    width: 100%;
-    z-index: 1;
-  }
-
-  .thumbnail {
-    .no-thumbnail {
-      display: none;
-    }
-  }
-
-  .topic-details {
-    grid-area: details;
-    display: grid;
-    padding: 0 10px 10px 10px;
-    z-index: 10;
-    grid-template-columns: 1 1 1 1 auto;
-    grid-template-rows: auto auto auto auto;
-    grid-template-areas:
-      "theader theader theader theader theader"
-      "excerpt excerpt excerpt excerpt excerpt"
-      "tags tags tags tags tags"
-      "meta meta meta meta actions";
   }
 
   .topic-excerpt {
