--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -86,7 +86,7 @@
     cursor: pointer;
     border-radius: 3px;
     grid-row-end: span 24;
-    
+
     &.white-text.has-thumbnail {
       .topic-details,
       .topic-title a.title,
@@ -94,7 +94,8 @@
       .topic-excerpt,
       .discourse-tag,
       .topic-views,
-      .badge-posts {
+      .badge-posts,
+      .like-count {
         color: white;
       }
     }
@@ -106,7 +107,8 @@
       .topic-excerpt,
       .discourse-tag,
       .topic-views,
-      .badge-posts {
+      .badge-posts,
+      .like-count {
         color: black;
       }
     }
@@ -228,7 +230,7 @@
   .topic-details {
     grid-area: details;
     display: grid;
-    padding: 0 10px 10px 10px;
+    padding: 10px 10px 10px 10px;
     z-index: 10;
     grid-template-columns: 1 1 1 1 auto;
     grid-template-rows: auto auto auto auto;
@@ -316,10 +318,6 @@
     justify-content: flex-end;
     text-align: right;
     vertical-align: bottom;
-
-    .like-count {
-      margin-right: -4px;
-    }
 
     .list-button {
       font-size: 1em;
