--- a/javascripts/discourse/templates/components/topic-list-item.hbs
+++ b/javascripts/discourse/templates/components/topic-list-item.hbs
@@ -33,65 +33,109 @@
     </div>
   </div>
 {{else}}
-  <td class='main-link clearfix' colspan="{{titleColSpan}}">
+  {{#if site.mobileView}}
     {{#if hasThumbnail}}
-      {{topic-thumbnail topic=topic thumbnails=thumbnails category=category opts=thumbnailOpts}}
-    {{/if}}
-    {{raw "list/topic-list-title"
-      topic=topic
-      tilesStyle=tilesStyle
-      showTopicPostBadges=showTopicPostBadges
-      homepage=parentView.homepage
-      suggested=parentView.suggestedList}}
-    {{#if showCategoryBadge}}
-      <div class='topic-category'>
-        {{category-link topic.category}}
+      {{topic-thumbnail topic=topic thumbnails=thumbnails tilesStyle=tilesStyle category=category opts=thumbnailOpts onChangeColor=(action "onChangeColor")}}
+    {{else}}
+      <div class='pull-left'>
+        <a href="{{topic.lastPostUrl}}" data-user-card="{{topic.last_poster_username}}">{{avatar topic.lastPosterUser imageSize="large"}}</a>
       </div>
     {{/if}}
-    {{discourse-tags topic mode="list" tagsForUser=tagsForUser}}
-    {{#if expandPinned}}
-      {{raw "list/topic-excerpt" topic=topic}}
-    {{/if}}
-    <div class="actions-and-meta-data">
+    <div class='topic-details'>
+      <div class='main-link'>
+        {{raw "list/topic-list-title"
+          topic=topic
+          showTopicPostBadges=showTopicPostBadges
+          homepage=parentView.homepage
+          suggested=parentView.suggestedList
+          mobileView=site.mobileView}}
+      </div>
+      <div class='pull-right'>
+        {{raw "list/post-count-or-badges" topic=topic postBadgesEnabled=showTopicPostBadges}}
+      </div>
+      {{#if expandPinned}}
+        {{raw "list/topic-excerpt" topic=topic}}
+      {{/if}}
+            {{#if showCategoryBadge}}
+        <div class='topic-category'>
+          {{category-link topic.category}}
+        </div>
+      {{/if}}
+
+      {{#if topic.tags}}
+        <div class='discourse-tags'>
+        {{#each topic.visibleListTags as |tag|}}
+          {{discourse-tag tag}}
+        {{/each}}
+        </div>
+      {{/if}}
+
       {{#if showActions}}
         {{raw "list/topic-actions" likeCount=likeCount topicActions=topicActions}}
       {{/if}}
-      {{raw "list/action-list" topic=topic postNumbers=topic.liked_post_numbers className="likes" icon="heart"}}
+
+      <div class='num activity last'>
+        <span class="age activity" title="{{topic.bumpedAtTitle}}"><a href="{{topic.lastPostUrl}}">{{format-date topic.bumpedAt format="tiny" noTitle="true"}}</a></span>
+      </div>
     </div>
-  </td>
-  {{#if showPosters}}
-    {{raw "list/posters-column" posters=topic.posters}}
-  {{/if}}
+  {{else}}
+    <td class='main-link clearfix' colspan="{{titleColSpan}}">
+      {{#if hasThumbnail}}
+        {{topic-thumbnail topic=topic thumbnails=thumbnails category=category opts=thumbnailOpts}}
+      {{/if}}
+      {{raw "list/topic-list-title"
+        topic=topic
+        tilesStyle=tilesStyle
+        showTopicPostBadges=showTopicPostBadges
+        homepage=parentView.homepage
+        suggested=parentView.suggestedList}}
+      {{#if showCategoryBadge}}
+        <div class='topic-category'>
+          {{category-link topic.category}}
+        </div>
+      {{/if}}
+      {{discourse-tags topic mode="list" tagsForUser=tagsForUser}}
+      {{#if expandPinned}}
+        {{raw "list/topic-excerpt" topic=topic}}
+      {{/if}}
+      <div class="actions-and-meta-data">
+        {{#if showActions}}
+          {{raw "list/topic-actions" likeCount=likeCount topicActions=topicActions}}
+        {{/if}}
+        {{raw "list/action-list" topic=topic postNumbers=topic.liked_post_numbers className="likes" icon="heart"}}
+      </div>
+    </td>
+    {{#if showPosters}}
+      {{raw "list/posters-column" posters=topic.posters}}
+    {{/if}}
 
-  {{raw "list/posts-count-column" topic=topic}}
+    {{raw "list/posts-count-column" topic=topic}}
 
-  {{#if showParticipants}}
-    {{raw "list/posters-column" posters=topic.participants}}
-  {{/if}}
+    {{#if showParticipants}}
+      {{raw "list/posters-column" posters=topic.participants}}
+    {{/if}}
 
-  {{#if showLikes}}
-    <td class="num likes">
-      {{#if hasLikes}}
+    {{#if showLikes}}
+      <td class="num likes">
+        {{#if hasLikes}}
+          <a href='{{topic.summaryUrl}}'>
+            {{number topic.like_count}} {{d-icon 'heart'}}
+          </a>
+        {{/if}}
+      </td>
+    {{/if}}
+
+    {{#if showOpLikes}}
+      <td class="num likes">
+      {{#if hasOpLikes}}
         <a href='{{topic.summaryUrl}}'>
-          {{number topic.like_count}} {{d-icon 'heart'}}
+          {{number topic.op_like_count}} {{d-icon 'heart'}}
         </a>
       {{/if}}
-    </td>
-  {{/if}}
-
-  {{#if showOpLikes}}
-    <td class="num likes">
-    {{#if hasOpLikes}}
-      <a href='{{topic.summaryUrl}}'>
-        {{number topic.op_like_count}} {{d-icon 'heart'}}
-      </a>
+      </td>
     {{/if}}
-    </td>
+
+    <td class="num views {{topic.viewsHeat}}">{{number topic.views numberKey="views_long"}}</td>
+    {{raw "list/activity-column" topic=topic class="num" tagName="td"}}
   {{/if}}
-
-  <td class="num views {{topic.viewsHeat}}">{{number topic.views numberKey="views_long"}}</td>
-  {{raw "list/activity-column" topic=topic class="num" tagName="td"}}
 {{/if}}
-
-
-
