simplify background update

--- a/javascripts/discourse/templates/components/topic-list-item.hbs
+++ b/javascripts/discourse/templates/components/topic-list-item.hbs
@@ -11,7 +11,7 @@
         {{topic-thumbnail topic=topic thumbnails=thumbnails tilesStyle=tilesStyle category=category opts=thumbnailOpts onChangeColor=(action "onChangeColor")}}
       {{/if}}
       <a href='{{topic.url}}'>
-        <div class="image-mask" style="{{backgroundGradientStyle}}"></div>
+        <div class="image-mask" style="{{backgroundGradient}}"></div>
       </a>
     </div>
     <div class="topic-details">
