--- a/javascripts/discourse/templates/components/tlp-featured-topic.hbs
+++ b/javascripts/discourse/templates/components/tlp-featured-topic.hbs
@@ -1,5 +1,5 @@
 <div class="featured-details">
-  {{preview-unbound topic.thumbnails opts=(hash featured=true)}}
+  {{preview-unbound topic.thumbnails currentUser=currentUser opts=(hash featured=true)}}
   <div class="content">
     <div class="title">
       {{topic.title}}
