fix tag duplication

--- a/common/common.scss
+++ b/common/common.scss
@@ -39,7 +39,7 @@
     cursor: pointer;
     border-radius: 3px;
 
-    > a, >span.number, .btn-link {
+    > a, >span.number, .btn-link, .link-bottom-line>.discourse-tags {
       display: none;
     }
 
