add some padding above tags

--- a/common/common.scss
+++ b/common/common.scss
@@ -48,7 +48,8 @@
       font-size: 1.143em;
 
       >.discourse-tags {
-        display: block
+        padding-top: 3px;
+        display: block;
       }
     }
 
