--- a/common/common.scss
+++ b/common/common.scss
@@ -30,16 +30,51 @@
   }
 
   .tiles-grid-item-content {
-    padding: 10px;
     display: grid;
-    grid-template-columns: 1 1 1 1 auto;
-    grid-template-rows: auto auto auto auto auto;
+    grid-template-columns: 1;
+    grid-template-rows: auto auto;
     grid-template-areas:
-     "theader theader theader theader theader"
-     "photo photo photo photo photo"
-     "details details details details details"
-     "tags tags tags tags tags"
-     "meta meta meta meta actions"
+      "photo"
+      "details";
+  }
+
+  .image {
+    grid-area: photo;
+  }
+
+  .topic-thumbnail {
+    padding: 0px;
+    z-index: -1;
+    width: 100%;
+    display: block;
+  }
+
+  .image-mask {
+    position: relative;
+    margin-bottom: -200px;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+  }
+
+  .thumbnail {
+    .no-thumbnail {
+      display: none;
+    }
+  }
+
+  .topic-details {
+    grid-area: details;
+    display: grid;
+    padding: 10px 10px 10px 10px;
+    z-index: 10;
+    grid-template-columns: 1 1 1 1 auto;
+    grid-template-rows: auto auto auto auto;
+    grid-template-areas:
+      "theader theader theader theader theader"
+      "excerpt excerpt excerpt excerpt excerpt"
+      "tags tags tags tags tags"
+      "meta meta meta meta actions";
   }
 
   .tiles-grid-item:hover {
@@ -130,30 +165,27 @@
     }
   }
 
-  .topic-details {
-    grid-area: details;
-    padding: 0 0 4px 0;
+  .topic-excerpt {
+    grid-area: excerpt;
 
-    .topic-excerpt {
-      line-height: 1.3;
-      max-height: 300px;
-      max-width: 100%;
-      float: left;
-      clear: both;
-      padding-right: 0px;
+    line-height: 1.3;
+    max-height: 300px;
+    max-width: 100%;
+    float: left;
+    clear: both;
+    padding-right: 0px;
 
-      overflow-wrap: break-word;
-      word-wrap: break-word;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
 
-      -ms-word-break: break-all;
-      word-break: break-all;
-      word-break: break-word;
+    -ms-word-break: break-all;
+    word-break: break-all;
+    word-break: break-word;
 
-      -ms-hyphens: auto;
-      -moz-hyphens: auto;
-      -webkit-hyphens: auto;
-      hyphens: auto;
-    }
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
   }
 
   .topic-tags {
